--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,12 @@
         "body-parser": "^2.2.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
-        "dotenv": "^17.2.1",
+        "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.17.1",
+        "mongoose": "^8.19.3",
         "node-cron": "^4.2.1",
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.10",
+        "socket.io": "^4.8.1"
     }
 }
