--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-query": "^5.86.0",
+    "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-query-devtools": "^5.86.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
